--- a/ens-tracking-api/package.json
+++ b/ens-tracking-api/package.json
@@ -39,6 +39,7 @@
     "custom-env": "^2.0.1",
     "ethers": "^5.5.2",
     "express": "^4.17.2",
+    "pg": "^8.7.3",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.1",
     "@types/node": "^16.11.11",
+    "@types/pg": "^8.6.5",
     "@web3api/cli": "0.0.1-prealpha.64",
     "@web3api/test-env-js": "0.0.1-prealpha.64",
     "copyfiles": "^2.4.1",
