--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -17,6 +17,7 @@
     "content-hash": "^2.5.2",
     "core-js": "^3.23.3",
     "ethers": "5.7.1",
+    "ethers-multicall": "^0.2.3",
     "file-saver": "^2.0.5",
     "ipfs-http-client": "^57.0.3",
     "it-all": "^1.0.6",
