--- a/serverless/gateway/typescript/functions/apiV0Add/package.json
+++ b/serverless/gateway/typescript/functions/apiV0Add/package.json
@@ -15,6 +15,8 @@
     "bundle": "webpack"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.254.0",
+    "@aws-sdk/client-s3": "^3.254.0",
     "aws-sdk": "2.1248.0",
     "lambda-multipart-parser": "1.0.1"
   },
