--- a/serverless/gateway/typescript/functions/apiV0Add/package.json
+++ b/serverless/gateway/typescript/functions/apiV0Add/package.json
@@ -18,10 +18,14 @@
     "@aws-sdk/client-dynamodb": "^3.254.0",
     "@aws-sdk/client-s3": "^3.254.0",
     "aws-sdk": "2.1248.0",
-    "lambda-multipart-parser": "1.0.1"
+    "lambda-multipart-parser": "1.0.1",
+    "node-gzip": "^1.1.2",
+    "tar-stream": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
+    "@types/node-gzip": "^1.1.0",
+    "@types/tar-stream": "^2.2.2",
     "jest": "27.1.1",
     "ts-jest": "27.0.5",
     "ts-node": "10.3.0",
