--- a/serverless/http-gateway/typescript/functions/gateway/package.json
+++ b/serverless/http-gateway/typescript/functions/gateway/package.json
@@ -16,13 +16,14 @@
     "test": "jest --passWithNoTests --runInBand --detectOpenHandles --verbose"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.254.0"
+    "@aws-sdk/client-dynamodb": "3.254.0",
+    "axios": "1.4.0"
   },
   "devDependencies": {
+    "@types/jest": "26.0.8",
     "@types/node": "16.11.11",
     "@types/node-gzip": "^1.1.0",
     "@types/tar-stream": "^2.2.2",
-    "@types/jest": "26.0.8",
     "jest": "27.1.1",
     "ts-jest": "27.0.5",
     "ts-node": "10.3.0",
