--- a/serverless/http-gateway/package.json
+++ b/serverless/http-gateway/package.json
@@ -18,6 +18,7 @@
     "serverless-domain-manager": "6.2.0",
     "serverless-dynamodb-local": "0.2.40",
     "serverless-offline": "11.2.1",
+    "serverless-rust": "0.3.8",
     "typescript": "4.8.4"
   }
 }
