--- a/serverless/http-gateway/typescript/service/package.json
+++ b/serverless/http-gateway/typescript/service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wrappers-account-service",
+  "name": "wrappers-http-gateway-publish",
   "version": "0.1.0",
   "main": "build/index.js",
   "author": "nerfZael",
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.254.0",
-    "@polywrap/result": "^0.10.1",
-    "serverless-utils": "file:../../../../utils/serverless-utils"
+    "@polywrap/result": "0.10.1",
+    "axios": "1.4.0",
+    "semver": "file:../../../utils/semver",
+    "serverless-utils": "file:../../../utils/serverless-utils"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
