change package info route because of aws route clash

--- a/serverless/http-gateway/serverless.yml
+++ b/serverless/http-gateway/serverless.yml
@@ -69,6 +69,22 @@ functions:
           path: u/{user}/{packageAndVersion}
           method: post
           cors: true
+  packageInfo:
+    handler: ./typescript/service/build/index.server.packageInfo
+    runtime: nodejs16.x
+    memorySize: 256
+    timeout: 10
+    package:
+      exclude:
+        - ./**
+      include:
+        - ./typescript/service/build/**
+        - ./typescript/service/node_modules/**
+    events:
+      - http:
+          path: v/{user}/{package}
+          method: get
+          cors: true
   resolve:
     handler: ./typescript/service/build/index.server.resolve
     runtime: nodejs16.x
@@ -83,22 +99,6 @@ functions:
     events:
       - http:
           path: u/{user}/{packageAndVersion}/{filePath}
-          method: get
-          cors: true
-  packageInfo:
-    handler: ./typescript/service/build/index.server.packageInfo
-    runtime: nodejs16.x
-    memorySize: 256
-    timeout: 10
-    package:
-      exclude:
-        - ./**
-      include:
-        - ./typescript/service/build/**
-        - ./typescript/service/node_modules/**
-    events:
-      - http:
-          path: u/{user}/{package}
           method: get
           cors: true
 resources:
